# bachelor-work-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  encrypt-passwords.py  entrypoint.sh  manage.py  pyproject.toml
advertisements/: models.py
advertisements/migrations/: 0001_initial.py  0002_initial.py
app/: admin.py  main.py
app/api/: endpoints.py
app/api/dependencies/: auth.py  repository.py  services.py  user.py
app/api/routes/: activity_category.py  billing.py  invoice.py  post.py  user.py  user_verification.py
app/config/settings/: base.py
app/core/: tasks.py
app/models/: __init__.py  chat.py  invoice.py  payment.py  post.py  user.py
app/repository/: activity_category.py  base.py  billing.py  invoice.py  post.py  user.py  user_verification.py
app/schemas/: activity_category.py  invoice.py  post.py  user.py  user_verification.py
app/securities/: auth_handler.py
app/services/: activity_category.py  base.py  billing.py  invoice.py  post.py  user.py  user_verification.py
app/utilities/: formatters.py  images.py  s3.py  validation.py
chats/: models.py
chats/migrations/: 0001_initial.py  0002_initial.py
mentorship_platform/: asgi.py  settings.py  urls.py  wsgi.py
migrations/versions/: 0495159bef7e_make_verification_admin_id_nullable.py  1e766569c084_extend_user_verification_model.py  265c474c5ffc_extend_mentor_verification_field.py  2fb4cd8a59f5_add_invoice_model.py  4abf13bc099d_add_invoice_model.py  4af21059d331_initial_migration.py  a13d4eaad344_add_activity_categories_to_verifications.py  b1b08347c104_make_user_full_name_optional_for_google_.py  e61a5293c7d2_make_timestamps_timezone_aware.py  f016f9a3f48e_initial_migration.py
payments/: models.py
payments/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  managers.py  mixins.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_latitude_alter_user_longitude_and_more.py
